--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Tarantool/Silverbox
+Tarantool/Silverbox, project Octopus
 
 Tarantool: in-memory storage framework
 Silverbox: Yet another in-memory key-value database
