s/tarantool/octopus/ darcs-patches: H4sIAAAAAAAAA53RSwrCQAwG4L2nmAv0sRHq0kUvociQSaNWppOSSYt4ei11KUi6SiB8fwJpndAYAcmVVRasGJXHKZeDOx+LExSvujhcnIJAUubovvNd+9t5ms10hCfbF2YFNSNN6jk87E4+vVlN2kcTUspa1bVfqg+QeywlmP1+9QMNCHinbktGs2bIlDzKlivW6/F6s8LYh+W3qYPIiTyl+e/2NwonWfDEAgAA

--- a/README
+++ b/README
@@ -22,8 +22,8 @@ How to run:
 1) compile (note GNU make is required)
 	./configure && make
 2) customize config
-	cp cfg/tarantool_box.cfg custom.cfg && emacs custom.cfg
+	cp cfg/octopus_box.cfg custom.cfg && emacs custom.cfg
 3) initialize storage
-        ./tarantool --config custom.cfg --init-storage
+        ./octopus --config custom.cfg --init-storage
 4) run
-	./tarantool --config custom.cfg
+	./octopus --config custom.cfg
